# pg_replicate

./: .dockerignore  .gitignore  404.html  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  cliff.toml  index.html  mkdocs.yaml  sitemap.xml
api/: Cargo.toml  Dockerfile
api/.sqlx/: query-08dea6839964cbc84386c8a46923a0bbce45638cc647ca3154f8c1e7360c8adf.json  query-4ad3e6599e7adddf23d3086f7ba6fc70442ba564dabe910aa5cb716cddfd28ea.json  query-cde84a487ade677ff4f500f943e4c679eef34df1de7af4084d51964670098097.json  query-f7d1d406236bd94609cab3ea6392bdb91f2435ce7a60c57c29665450c2f624f3.json
api/configuration/: dev.yaml
api/migrations/: 20250710165125_remove_publication_name_from_pipelines.sql  20250710165153_remove_replicator_status_type.sql
api/src/: authentication.rs  config.rs  encryption.rs  k8s_client.rs  main.rs  span_builder.rs  startup.rs  utils.rs
api/src/db/: destinations.rs  destinations_pipelines.rs  images.rs  pipelines.rs  publications.rs  replicators.rs  serde.rs  sources.rs  tables.rs  tenants.rs  tenants_sources.rs
api/src/routes/: destinations.rs  destinations_pipelines.rs  health_check.rs  images.rs  mod.rs  pipelines.rs  sources.rs  tenants.rs  tenants_sources.rs
api/tests/common/: database.rs  k8s_client.rs  mod.rs  test_app.rs
api/tests/integration/: destination_test.rs  destinations_pipelines_test.rs  health_check_test.rs  images_test.rs  pipelines_test.rs  sources_test.rs  tenants_sources_test.rs  tenants_test.rs
config/: Cargo.toml
config/src/: environment.rs  load.rs  secret.rs
config/src/shared/: base.rs  batch.rs  connection.rs  destination.rs  mod.rs  pipeline.rs  replicator.rs  retry.rs  sentry.rs  source.rs  state_store.rs
etl/: Cargo.toml  README.md
etl-api/: Cargo.toml  Dockerfile  README.md
etl-api/.sqlx/: query-01b269606b229e7096c035c9c1c7076bfa8c109d9ce0a325e153280662b4594f.json  query-1311523ae32e54b8cf3f59fc333988a55a25fdabb4539f3578b957b4fb20548b.json  query-2bdc3a44f079b66e8e4ac157266de4d179f81b48c7ae678285623b99a9780cb0.json  query-2f01277ef7713959124f926eda202a48a6481dbd750947e89a4995c766820c29.json  query-32d4ef8790cd672f7ad264113224bbf3cd8579f64afde9edec81f8580419f122.json  query-4b85b3c70c913d4199ed7ecb866a3970d4fe7e073139ec6359c27495bf9a2576.json  query-4fb016ec6894d56ce9e370fd5d451d5c437dc819628623c13b59843a1976f256.json  query-5c9e875ddc859a3176d783df47d7fdc52760a1d3313ffb1b2c0247a5c6f75e54.json  query-6c018ac4f32a1c8ec612900773ea1b33096d8947fddfcb921fe88520d9c47a87.json  query-6dc7d393549d53423f0a2eac7e151a4942aa84a84f27dc8c66d457d756b45ad1.json  query-6f88a830c0f0f8852ebe061a261b6589d8a3ee8a1365690dff2b2f1c0153ee43.json  query-72760d1a5e4fbd15a77eb2366c4b653c5bb5e3470ec2054dc26f615989bf3ad4.json  query-9225705adb7aaeec671bc0157fe6a5c9e6e1fb3713e53396a3946f7fb6e9c56d.json  query-93dc26216d52721b06377f7ad8d3f1ca2830a96fbce95a7052752f24e8554987.json  query-a5693ecd0abbc7215139902be1512e78afc5165f91559cf073d4d807ac4ea2b7.json  query-b08170bc382bb68f04b8f7d834a3f6939ec4cce53f22b85fdde8627a925747a4.json  query-bdaff968a81a9c83097ddfc661cf421f27bc1d50511c247857e3224d406d954c.json
etl-api/configuration/: dev.yaml
etl-api/migrations/: 20250806144453_ensure_one_default_image.sql  20250807150000_remove_cascade_delete_from_destinations_sources.sql  20250827000000_base.sql  20250905100000_update_default_image_function.sql
etl-api/scripts/: run_migrations.sh
etl-api/src/: authentication.rs  config.rs  encryption.rs  k8s_client.rs  lib.rs  main.rs  metrics.rs  span_builder.rs  startup.rs  utils.rs
etl-api/src/configs/: destination.rs  mod.rs  pipeline.rs  serde.rs  source.rs  store.rs
etl-api/src/db/: destinations.rs  destinations_pipelines.rs  images.rs  mod.rs  pipelines.rs  publications.rs  replicators.rs  serde.rs  sources.rs  tables.rs  tenants.rs  tenants_sources.rs  utils.rs
etl-api/tests/: destinations.rs  destinations_pipelines.rs  health_check.rs  images.rs  metrics.rs  missing_etl_tables.rs  pipelines.rs  sources.rs  tenants.rs  tenants_sources.rs
etl-benchmarks/: Cargo.toml  README.md
etl-benchmarks/benches/: table_copies.rs
etl-benchmarks/scripts/: benchmark.sh  mem_profile.sh
etl-config/: Cargo.toml  README.md
etl-config/src/: environment.rs  lib.rs  load.rs  secret.rs
etl-destinations/: Cargo.toml  README.md
etl-destinations/src/: lib.rs  metrics.rs
etl-destinations/tests/: bigquery_pipeline.rs  iceberg_pipeline.rs
etl-examples/: Cargo.toml  README.md
etl-examples/src/: main.rs
etl-postgres/: Cargo.toml  README.md
etl-postgres/.sqlx/: query-bc8119f0a137815cb238b9b2bdec2160ff9d6eb23e2e0bd92f3d1581bc4a30e0.json
etl-postgres/src/: lib.rs  schema.rs  time.rs  types.rs
etl-replicator/: Cargo.toml  Dockerfile  README.md
etl-replicator/migrations/: 20250616122411_create_replication_state_table.sql  20250801145911_extend_state_store_with_metadata_and_history_part2.sql  20250804120000_create_table_schema_storage.sql  20250812120000_create_table_mappings.sql  20250814120000_add_timestamps_to_replication_state.sql  20250827000000_base.sql
etl-replicator/src/: config.rs  core.rs  main.rs  migrations.rs
etl-telemetry/: Cargo.toml
etl-telemetry/src/: lib.rs  metrics.rs  tracing.rs
etl/benches/: table_copies.rs
etl/examples/: bigquery.rs  clickhouse.rs  duckdb.rs  stdout.rs
etl/src/: error.rs  failpoints.rs  lib.rs  macros.rs  metrics.rs  pipeline.rs
etl/tests/: failpoints_pipeline.rs  mod.rs  pipeline.rs  postgres_store.rs  replica_identity.rs  replication.rs
postgres/: Cargo.toml
postgres/src/: lib.rs  schema.rs
replicator/: Cargo.toml  Dockerfile
replicator/configuration/: base.yaml  dev.yaml
replicator/migrations/: 20250801145910_extend_state_store_with_metadata_and_history_part1.sql
replicator/src/: config.rs  core.rs  main.rs  migrations.rs
replicator_bigquery/: Cargo.toml  Dockerfile  docker-compose.dev.yml
replicator_bigquery/configuration/: base.yaml  dev.yaml
replicator_bigquery/src/: core.rs  main.rs
replicators/: Cargo.toml  docker-compose.dev.yml
replicators/configuration/: dev.yaml
replicators/src/: config.rs  core.rs  main.rs
(+386 files in other folders)
