[workspace]
resolver = "2"
members = [
    "etl",
    "etl-api",
    "etl-benchmarks",
    "etl-config",
    "etl-destinations",
    "etl-examples",
    "etl-postgres",
    "etl-replicator",
    "etl-telemetry",
]

[workspace.dependencies]
etl = { path = "etl", default-features = false }
etl-api = { path = "etl-api", default-features = false }
etl-config = { path = "etl-config", default-features = false }
etl-destinations = { path = "etl-destinations", default-features = false }
etl-postgres = { path = "etl-postgres", default-features = false }
etl-replicator = { path = "etl-replicator", default-features = false }
etl-telemetry = { path = "etl-telemetry", default-features = false }

actix-web = { version = "4.11.0", default-features = false }
actix-web-httpauth = { version = "0.8.2", default-features = false }
anyhow = { version = "1.0.98", default-features = false }
async-trait = { version = "0.1.88" }
aws-lc-rs = { version = "1.13.3", default-features = false }
base64 = { version = "0.22.1", default-features = false }
byteorder = { version = "1.5.0", default-features = false }
bytes = { version = "1.10.1" }
chrono = { version = "0.4.41", default-features = false }
clap = { version = "4.5.42", default-features = false }
config = { package = "config", version = "0.14", default-features = false }
const-oid = { version = "0.9.6", default-features = false }
constant_time_eq = { version = "0.4.2" }
fail = { version = "0.5.1", default-features = false }
futures = { version = "0.3.31", default-features = false }
gcp-bigquery-client = { version = "0.26.0", default-features = false }
insta = { version = "1.43.1", default-features = false }
k8s-openapi = { version = "0.25.0", default-features = false }
kube = { version = "1.1.0", default-features = false }
pg_escape = { version = "0.1.1", default-features = false }
pin-project-lite = { version = "0.2.16", default-features = false }
postgres-replication = { git = "https://github.com/MaterializeInc/rust-postgres", default-features = false, rev = "c4b473b478b3adfbf8667d2fbe895d8423f1290b" }
prost = { version = "0.13.5", default-features = false }
rand = { version = "0.9.2", default-features = false }
reqwest = { version = "0.12.22", default-features = false }
ring = { version = "0.17.14", default-features = false }
rustls = { version = "0.23.31", default-features = false }
rustls-pemfile = { version = "2.2.0", default-features = false }
secrecy = { version = "0.10.3", default-features = false }
sentry = { version = "0.42.0" }
serde = { version = "1.0.219", default-features = false }
serde_json = { version = "1.0.141", default-features = false }
sqlx = { version = "0.8.6", default-features = false }
thiserror = "2.0.12"
tokio = { version = "1.47.0", default-features = false }
tokio-postgres = { git = "https://github.com/MaterializeInc/rust-postgres", default-features = false, rev = "c4b473b478b3adfbf8667d2fbe895d8423f1290b" }
tokio-rustls = { version = "0.26.2", default-features = false }
tracing = { version = "0.1.41", default-features = false }
tracing-actix-web = { version = "0.7.19", default-features = false }
tracing-appender = { version = "0.2.3", default-features = false }
tracing-log = { version = "0.2.0", default-features = false }
tracing-subscriber = { version = "0.3.19", default-features = false }
utoipa = { version = "5.4.0", default-features = false }
utoipa-swagger-ui = { version = "9.0.2", default-features = false }
uuid = { version = "1.17.0", default-features = false }
x509-cert = { version = "0.2.2", default-features = false }
