[workspace]
resolver = "2"

members = [
    "config",
    "etl",
    "postgres",
    "replicators",
    "telemetry",
]

[workspace.dependencies]
config = { path = "config" }
etl = { path = "etl" }
postgres = { path = "postgres" }
replicators = { path = "replicators" }
telemetry = { path = "telemetry" }

anyhow = { version = "1.0", default-features = false }
async-trait = { version = "0.1" }
aws-lc-rs = { version = "1.8.1", default-features = false }
base64 = { version = "0.22.1", default-features = false }
bigdecimal = { version = "0.4.6", default-features = false }
bytes = { version = "1.0" }
byteorder = { version = "1.5.0", default-features = false }
chrono = { version = "0.4", default-features = false }
const-oid = { version = "0.9.6", default-features = false }
clap = { version = "4.5", default-features = false }
clickhouse = { version = "0.13", default-features = false }
rust-cli-config = { package = "config", version = "0.14", default-features = false }
constant_time_eq = { version = "0.3.1" }
insta = { version = "1.43.1", default-features = false }
futures = { version = "0.3.31", default-features = false }
gcp-bigquery-client = { version = "0.26.0", default-features = false }
k8s-openapi = { version = "0.23.0", default-features = false }
kube = { version = "0.96.0", default-features = false }
pg_escape = { version = "0.1.1", default-features = false }
pin-project-lite = { version = "0.2", default-features = false }
# postgres-replication = { git = "https://github.com/MaterializeInc/rust-postgres", default-features = false, rev = "c4b473b478b3adfbf8667d2fbe895d8423f1290b" }
postgres-replication = { git = "https://github.com/thewandererbg/rust-postgres", default-features = false, rev = "47ad737f9a085a00c2e0e6a9c74cd7575eb4e1d7" }
prost = { version = "0.13.1", default-features = false }
rand = { version = "0.8.5", default-features = false }
reqwest = { version = "0.12", default-features = false }
ring = { version = "0.17.14", default-features = false }
rustls = { version = "0.23.31", default-features = false }
rustls-pemfile = { version = "2.2.0", default-features = false }
rustyline = { version = "14.0.0", default-features = false }
secrecy = { version = "0.8.0", default-features = false }
serde = { version = "1.0", default-features = false }
serde_json = { version = "1.0", default-features = false }
thiserror = "1.0"
tokio = { version = "1.38", default-features = false }
# tokio-postgres = { git = "https://github.com/MaterializeInc/rust-postgres", default-features = false, rev = "c4b473b478b3adfbf8667d2fbe895d8423f1290b" }
tokio-postgres = { git = "https://github.com/thewandererbg/rust-postgres", default-features = false, rev = "47ad737f9a085a00c2e0e6a9c74cd7575eb4e1d7" }
tokio-rustls = { version = "0.26.2", default-features = false }
tracing = { version = "0.1", default-features = false }
tracing-actix-web = { version = "0.7", default-features = false }
tracing-appender = { version = "0.2.3", default-features = false }
tracing-log = { version = "0.2.0", default-features = false }
tracing-subscriber = { version = "0.3", default-features = false }
utoipa = { version = "4.2.3", default-features = false }
utoipa-swagger-ui = { version = "7.1.0", default-features = false }
uuid = { version = "1.10.0", default-features = false }
x509-cert = { version = "0.2.2", default-features = false }
