[package]
name = "config"
version = "0.1.0"
edition = "2024"

[features]
utoipa = ["dep:utoipa"]

[dependencies]
rust-cli-config = { workspace = true, features = ["yaml"] }
secrecy = { workspace = true }
serde = { workspace = true, features = ["derive"] }
sqlx = { workspace = true, features = ["postgres"] }
thiserror = { workspace = true }
tokio-postgres = { workspace = true }
utoipa = { workspace = true, optional = true }
