[package]
name = "etl-benchmarks"
version = "0.1.0"
edition = "2024"

[dev-dependencies]
config = { workspace = true }
etl = { workspace = true }
etl-destinations = { workspace = true, features = ["bigquery"] }
postgres = { workspace = true, features = ["sqlx"] }
telemetry = { workspace = true }

clap = { workspace = true, default-features = true, features = [
    "std",
    "derive",
] }
sqlx = { workspace = true, features = ["runtime-tokio-rustls", "postgres"] }
tokio = { workspace = true, features = [
    "rt-multi-thread",
    "macros",
    "sync",
    "signal",
] }
tracing = { workspace = true, default-features = true }

[[bench]]
name = "table_copies"
harness = false
