[package]
name = "etl-benchmarks"
version = "0.1.0"
edition = "2024"

[dev-dependencies]
etl = { workspace = true, features = ["test-utils"] }
etl-config = { workspace = true }
etl-destinations = { workspace = true, features = ["bigquery"] }
etl-postgres = { workspace = true, features = ["sqlx"] }
etl-telemetry = { workspace = true }

clap = { workspace = true, default-features = true, features = [
    "std",
    "derive",
] }
sqlx = { workspace = true, features = ["runtime-tokio-rustls", "postgres"] }
tokio = { workspace = true, features = [
    "rt-multi-thread",
    "macros",
    "sync",
    "signal",
] }
tracing = { workspace = true, default-features = true }

[[bench]]
name = "table_copies"
harness = false

[profile.bench]
debug = true
