[package]
name = "etl-config"
version = "0.1.1"
edition = "2024"

[features]
utoipa = ["dep:utoipa"]

[dependencies]
config = { workspace = true, features = ["yaml"] }
secrecy = { workspace = true }
serde = { workspace = true, features = ["derive"] }
sqlx = { workspace = true, features = ["postgres"] }
thiserror = { workspace = true }
tokio-postgres = { workspace = true }
utoipa = { workspace = true, optional = true }
