[package]
name = "etl-destinations"
version = "0.1.0"
edition = "2024"

[dependencies]
etl = { workspace = true }

futures = { workspace = true, optional = true }
gcp-bigquery-client = { workspace = true, optional = true, features = [
    "rust-tls",
    "aws-lc-rs",
] }
prost = { workspace = true, optional = true }
rustls = { workspace = true, optional = true, features = ["aws-lc-rs", "logging"] }
tracing = { workspace = true, optional = true, default-features = true }
tokio = { workspace = true, optional = true, features = ["sync"] }

[dev-dependencies]
etl = { workspace = true, features = ["test-utils"] }

base64 = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
serde_json = { workspace = true }
rand = { workspace = true, features = ["thread_rng"] }
telemetry = { workspace = true }

[features]
bigquery = [
    "dep:futures",
    "dep:gcp-bigquery-client",
    "dep:prost",
    "dep:rustls",
    "dep:tracing",
    "dep:tokio"
]