[package]
name = "etl-destinations"
version = "0.1.0"
edition = "2024"

[features]
bigquery = [
    "dep:futures",
    "dep:gcp-bigquery-client",
    "dep:prost",
    "dep:rustls",
    "dep:tracing",
    "dep:tokio",
]

[dependencies]
etl = { workspace = true }
etl-postgres = { workspace = true }

futures = { workspace = true, optional = true }
gcp-bigquery-client = { workspace = true, optional = true, features = [
    "rust-tls",
    "aws-lc-rs",
] }
metrics = { workspace = true }
prost = { workspace = true, optional = true }
rustls = { workspace = true, optional = true, features = [
    "aws-lc-rs",
    "logging",
] }
tokio = { workspace = true, optional = true, features = ["sync"] }
tracing = { workspace = true, optional = true, default-features = true }

[dev-dependencies]
etl = { workspace = true, features = ["test-utils"] }
etl-telemetry = { workspace = true }

base64 = { workspace = true }
chrono = { workspace = true }
rand = { workspace = true, features = ["thread_rng"] }
serde_json = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
