[package]
name = "etl-examples"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
etl = { workspace = true }
etl-destinations = { workspace = true, features = ["bigquery"] }

clap = { workspace = true, default-features = true, features = [
    "std",
    "derive",
] }
tokio = { workspace = true, features = ["macros", "signal"] }
tracing = { workspace = true, default-features = true }
tracing-subscriber = { workspace = true, default-features = true, features = ["env-filter"] }
