[package]
name = "etl-replicator"
version = "0.1.2"
edition = "2024"

[dependencies]
etl = { workspace = true, features = ["unknown-types-to-bytes"] }
etl-config = { workspace = true }
etl-destinations = { workspace = true, features = ["bigquery", "iceberg"] }
etl-telemetry = { workspace = true }

anyhow = { workspace = true, features = ["std"] }
secrecy = { workspace = true }
sentry = { workspace = true }
sqlx = { workspace = true, features = [
    "runtime-tokio-rustls",
    "postgres",
    "migrate",
] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "signal"] }
tracing = { workspace = true, default-features = true }
