[package]
name = "etl-telemetry"
version = "0.1.0"
edition = "2024"

[dependencies]
etl-config = { workspace = true }

serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true, default-features = true }
tracing-appender = { workspace = true }
tracing-log = { workspace = true, features = ["std", "log-tracer"] }
tracing-subscriber = { workspace = true, default-features = true, features = [
    "json",
    "env-filter",
    "ansi",
] }
