[package]
name = "etl-telemetry"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
etl-config = { workspace = true }

metrics-exporter-prometheus = { workspace = true, features = ["http-listener"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true, default-features = true }
tracing-appender = { workspace = true }
tracing-log = { workspace = true, features = ["std", "log-tracer"] }
tracing-subscriber = { workspace = true, default-features = true, features = [
    "json",
    "env-filter",
    "ansi",
] }
