[package]
name = "etl"
version = "0.1.0"
edition = "2024"
autotests = false

[features]
unknown-types-to-bytes = []
test-utils = ["etl-postgres/test-utils"]
failpoints = ["fail/failpoints"]
default = ["unknown-types-to-bytes"]

[dependencies]
etl-config = { workspace = true }
etl-postgres = { workspace = true, features = ["tokio", "replication"] }

byteorder = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
const-oid = { workspace = true, default-features = false }
fail = { workspace = true }
futures = { workspace = true }
pg_escape = { workspace = true }
pin-project-lite = { workspace = true }
postgres-replication = { workspace = true }
ring = { workspace = true, default-features = false }
rustls = { workspace = true, features = ["aws-lc-rs", "logging"] }
rustls-pemfile = { workspace = true, features = ["std"] }
serde_json = { workspace = true, features = ["std"] }
sqlx = { workspace = true, features = ["runtime-tokio-rustls", "postgres"] }
tokio = { workspace = true, features = ["rt-multi-thread"] }
tokio-postgres = { workspace = true, features = [
    "runtime",
    "with-chrono-0_4",
    "with-uuid-1",
    "with-serde_json-1",
] }
tokio-rustls = { workspace = true, default-features = false }
tracing = { workspace = true, default-features = true }
uuid = { workspace = true, features = ["v4"] }
x509-cert = { workspace = true, default-features = false }

[dev-dependencies]
etl-postgres = { workspace = true, features = ["tokio", "replication", "test-utils"] }
etl-telemetry = { workspace = true }

rand = { workspace = true, features = ["thread_rng"] }

[[test]]
name = "integration"
path = "tests/integration/mod.rs"
required-features = ["test-utils"]

[[test]]
name = "failpoints"
path = "tests/failpoints/mod.rs"
required-features = ["failpoints", "test-utils"]
