[package]
name = "etl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
postgres = { workspace = true }

async-trait = { workspace = true }
bigdecimal = { workspace = true, features = ["std"] }
bytes = { workspace = true }
byteorder = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
clickhouse = { workspace = true, optional = true }
const-oid = { workspace = true, default-features = false }
futures = { workspace = true }
gcp-bigquery-client = { workspace = true, optional = true, features = [
    "rust-tls",
    "aws-lc-rs",
] }
pg_escape = { workspace = true }
pin-project-lite = { workspace = true }
postgres-replication = { workspace = true }
prost = { workspace = true, optional = true }
rustls = { workspace = true, features = ["aws-lc-rs", "logging"] }
ring = { workspace = true, default-features = false }
serde = { workspace = true }
serde_json = { workspace = true, features = ["std"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync"] }
tokio-postgres = { workspace = true, features = [
    "runtime",
    "with-chrono-0_4",
    "with-uuid-1",
    "with-serde_json-1",
] }
tokio-rustls = { workspace = true, default-features = false }
tracing = { workspace = true, default-features = true }
tracing-subscriber = { workspace = true, default-features = true, features = [
    "env-filter",
] }
uuid = { workspace = true, features = ["v4"] }
x509-cert = { workspace = true, default-features = false }

[dev-dependencies]
postgres = { workspace = true, features = ["test-utils", "tokio"] }

clap = { workspace = true, default-features = true, features = [
    "std",
    "derive",
] }


[features]
bigquery = ["dep:gcp-bigquery-client", "dep:prost"]
clickhouse = ["dep:clickhouse"]
stdout = []
# When enabled converts unknown types to bytes
unknown_types_to_bytes = []
default = ["unknown_types_to_bytes"]
