[package]
name = "postgres"
version = "0.1.0"
edition = "2024"

[dependencies]
config = { workspace = true }
pg_escape = { workspace = true }
rustls = { workspace = true }
serde = { workspace = true, features = ["derive"] }
secrecy = { workspace = true, features = ["serde", "alloc"] }
sqlx = { workspace = true, features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "json",
    "migrate",
] }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tokio-postgres = { workspace = true, features = [
    "runtime",
    "with-chrono-0_4",
    "with-uuid-1",
    "with-serde_json-1",
] }
thiserror = { workspace = true }
tracing = { workspace = true }
utoipa = { workspace = true }
uuid = { workspace = true, features = ["v4"] }


[features]
test-utils = []
tokio = []
sqlx = []
bigquery = []
replication = ["sqlx"]