[package]
name = "postgres"
version = "0.1.0"
edition = "2024"

[features]
test-utils = []
tokio = []
sqlx = []
bigquery = []
replication = ["sqlx"]

[dependencies]
config = { workspace = true }

bytes = { workspace = true }
pg_escape = { workspace = true }
sqlx = { workspace = true, features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "json",
    "migrate",
] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tokio-postgres = { workspace = true, features = [
    "runtime",
    "with-chrono-0_4",
    "with-uuid-1",
    "with-serde_json-1",
] }
tracing = { workspace = true }
