[package]
name = "replicator"
version = "0.1.0"
edition = "2024"

[dependencies]
config = { workspace = true }
etl = { workspace = true, features = ["unknown-types-to-bytes", "bigquery"] }
postgres = { workspace = true, features = ["tokio"] }
telemetry = { workspace = true }

anyhow = { workspace = true, features = ["std"] }
thiserror = { workspace = true }
secrecy = { workspace = true }
sentry = { workspace = true }
sqlx = { workspace = true, features = [
    "runtime-tokio-rustls",
    "postgres",
    "migrate",
] }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "signal"] }
tracing = { workspace = true, default-features = true }
