[package]
name = "replicator"
version = "0.1.0"
edition = "2024"

[dependencies]
config = { workspace = true }
etl = { workspace = true, features = ["unknown-types-to-bytes"] }
etl-destinations = { workspace = true, features = ["bigquery"] }
telemetry = { workspace = true }

anyhow = { workspace = true, features = ["std"] }
secrecy = { workspace = true }
sentry = { workspace = true }
sqlx = { workspace = true, features = [
    "runtime-tokio-rustls",
    "postgres",
    "migrate",
] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "signal"] }
tracing = { workspace = true, default-features = true }
