[package]
name = "replicators"
version = "0.1.0"
edition = "2021"

[dependencies]
config = { workspace = true }
etl = { workspace = true, features = ["clickhouse", "bigquery"] }
postgres = { workspace = true, features = ["tokio"] }
telemetry = { workspace = true }

anyhow = { workspace = true, features = ["std"] }
thiserror = { workspace = true }
rustls-pemfile = { workspace = true, features = ["std"] }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "signal"] }
tracing = { workspace = true, default-features = true }
tokio-postgres = { workspace = true, features = [
    "runtime",
    "with-chrono-0_4",
    "with-uuid-1",
    "with-serde_json-1",
] }
async-trait = { workspace = true }
